use jakarta.servlet.* and modify @RequestMapping